--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-011.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-011.html
@@ -26,7 +26,7 @@
         }
         #image {
             float: left;
-            shape-outside: url("support/circle-shadow.png");
+            -webkit-shape-outside: url("support/circle-shadow.png");
         }
         #failure {
             width: 300px;
@@ -36,18 +36,17 @@
         #line-1, #line-5 { margin-left: 218px; }
         #line-2, #line-4 { margin-left: 236px; }
         #line-3 { margin-left: 238px; }
-        #line-6 { margin-top: 7px; }
+        #line-6 { margin-left: 160px; }
     </style>
 </head>
 <body>
     <p>
-        The test passes if the short green horizontal bars are the right of the circle,
-        the long green bar is beneath the circle, and no bars intersect the circle's shadow.
-        There should be no red.
+        The test passes if the green horizontal bars are to the right of the circle,
+        and no bars intersect the circle's shadow. There should be no red.
     </p>    
     <div id="test" class="container">
         <img id="image" src="support/circle-shadow.png"/>
-        XXXXXX XXXXXX XXXXXX XXXXXX XXXXXX XXXXXXXXXXXXXXX
+        XXXXXX XXXXXX XXXXXX XXXXXX XXXXXX XXXXXX
     </div>
     <div id="failure" class="container">
         <span id="line-1">XXXXXX</span>
@@ -55,7 +54,7 @@
         <span id="line-3">XXXXXX</span>
         <span id="line-4">XXXXXX</span>
         <span id="line-5">XXXXXX</span>
-        <div id="line-6">XXXXXXXXXXXXXXX</div>
+        <div id="line-6">XXXXXX</div>
     </div>
 </body>
 </html>
