--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-011.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-011.html
@@ -26,7 +26,7 @@
         }
         #image {
             float: left;
-            -webkit-shape-outside: url("support/circle-shadow.png");
+            shape-outside: url("support/circle-shadow.png");
         }
         #failure {
             width: 300px;
