--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-019.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-019.html
@@ -35,7 +35,7 @@
             width: 300px;
             height: 300px;
             background-color: black;
-            clip-path: ellipse(115px, 100px, 140px, 130px);
+            clip-path: ellipse(115px 100px at 140px 100px);
             z-index: -1;
         }
         #failure {
