--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-013.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-013.html
@@ -37,7 +37,7 @@
             width: 230px;
             height: 230px;
             background-color: blue;
-            clip-path: circle(115px);
+            border-radius: 150px;
         }
         #failure {
             width: 300px;
