--- a/html/semantics/embedded-content/the-object-element/test0.html
+++ b/html/semantics/embedded-content/the-object-element/test0.html
@@ -4,8 +4,7 @@
 <link rel="author" title="Intel" href="http://www.intel.com">
 <script>
 
-parent.document.getElementById("result").innerHTML = "1";
-parent.postMessage("test0 loaded", "*");
+parent.callback("test0");
 document.location.href = "test1.html";
 
 </script>
