--- a/html/semantics/embedded-content/the-object-element/test1.html
+++ b/html/semantics/embedded-content/the-object-element/test1.html
@@ -4,6 +4,6 @@
 <link rel="author" title="Intel" href="http://www.intel.com">
 <script>
 
-parent.window.postMessage("test1 loaded", "*");
+parent.callback("test1");
 
 </script>
