--- a/html/semantics/embedded-content/the-object-element/object-events.html
+++ b/html/semantics/embedded-content/the-object-element/object-events.html
@@ -7,43 +7,61 @@
 <div id="log"></div>
 <script>
 
-async_test(function(t1) {
-  var obj1 = document.createElement("object");
-  obj1.onerror = t1.step_func_done(function(e){
-    assert_true(e.isTrusted, "The error event should be a truested event.");
+async_test(function(t) {
+  var obj = document.createElement("object");
+  obj.onerror = t.step_func_done(function(e){
+    assert_equals(obj.contentDocument.location.href, "about:blank");
+    assert_equals(Object.getPrototypeOf(e).constructor, Event, "The error event should use the Event interface.");
+    assert_true(e.isTrusted, "The error event should be a trusted event.");
     assert_false(e.cancelable, "The error event should not be a cancelable event.");
     assert_false(e.bubbles, "The error event should not be a bubble event.");
-    assert_equals(e.target, obj1, "The error event target should be the corresponding object element.");
-    assert_true(e instanceof Event, "The error event should be an instance of Event interface.");
+    assert_equals(e.target, obj, "The error event target should be the corresponding object element.");
   });
-  obj1.data = "test.html";
-  document.body.appendChild(obj1);
-}, "eroor event");
 
-async_test(function(t2) {
-  var obj2 = document.createElement("object");
-  obj2.onload = t2.step_func_done(function(e){
-    assert_true(e.isTrusted, "The load event should be a truested event.");
+  obj.onload = t.step_func_done(function(e){
+    assert_unreached("The load event should not be fired.");
+  });
+
+  obj.data = "test.html";
+  document.body.appendChild(obj);
+}, "error event");
+
+async_test(function(t) {
+  var obj = document.createElement("object");
+  obj.onload = t.step_func_done(function(e){
+    assert_false(obj.contentWindow instanceof Window, "The image in the object element is not a nested browsing context.");
+    assert_equals(Object.getPrototypeOf(e).constructor, Event, "The load event should use the Event interface.");
+    assert_true(e.isTrusted, "The load event should be a trusted event.");
     assert_false(e.cancelable, "The load event should not be a cancelable event.");
     assert_false(e.bubbles, "The load event should not be a bubble event.");
-    assert_equals(e.target, obj2, "The load event target should be the corresponding object element.");
-    assert_true(e instanceof Event, "The load event should be an instance of Event interface.");
+    assert_equals(e.target, obj, "The load event target should be the corresponding object element.");
   });
-  obj2.data = "/images/blue.png";
-  document.body.appendChild(obj2);
+
+  obj.onerror = t.step_func_done(function(e){
+    assert_unreached("The error event should not be fired.");
+  });
+
+  obj.data = "/images/blue.png";
+  document.body.appendChild(obj);
 }, "load event");
 
-async_test(function(t3) {
-  var obj3 = document.createElement("object");
-  obj3.onload = t3.step_func_done(function(e){
-    assert_true(e.isTrusted, "The laod event should be a truested event.");
+async_test(function(t) {
+  var obj = document.createElement("object");
+  obj.onload = t.step_func_done(function(e){
+    assert_true(obj.contentWindow instanceof Window, "The object element should represent a nested browsing context.")
+    assert_equals(Object.getPrototypeOf(e).constructor, Event, "The load event should use the Event interface.");
+    assert_true(e.isTrusted, "The load event should be a trusted event.");
     assert_false(e.cancelable, "The load event should not be a cancelable event.");
     assert_false(e.bubbles, "The load event should not be a bubble event.");
-    assert_equals(e.target, obj3, "The load event target should be the corresponding object element.");
-    assert_true(e instanceof Event, "The load event should be an instance of Event interface.");
+    assert_equals(e.target, obj, "The load event target should be the corresponding object element.");
   });
-  obj3.data = "about:blank";
-  document.body.appendChild(obj3);
+
+  obj.onerror = t.step_func_done(function(e){
+    assert_unreached("The error event should not be fired.");
+  });
+
+  obj.data = "about:blank";
+  document.body.appendChild(obj);
 }, "load event of about:blank");
 
 </script>
