Updated test assertion number

--- a/pointerevents/pointerevent_pointerout_pen.html
+++ b/pointerevents/pointerevent_pointerout_pen.html
@@ -16,7 +16,7 @@
         <script>
             var test_pointerout = async_test("pointerout event received");
             // showPointerTypes is defined in pointerevent_support.js
-            // Requirements: the callbakc function will reference the test_pointerEvent object and
+            // Requirements: the callback function will reference the test_pointerEvent object and
             // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
             
@@ -28,7 +28,7 @@
             	var target0 = document.getElementById("target0");
 	
                 // When a pen stylus leaves the hover range detectable by the digitizer the pointerout event must be dispatched. 
-                // TA: 7.7
+                // TA: 7.2
                 on_event(target0, "pointerout", function (event) {
                     if(event.pointerType == 'pen') {
                         if (eventTested == false) {
