--- a/media-source/URL-createObjectURL.html
+++ b/media-source/URL-createObjectURL.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>insertAdjacentHTML</title>
+  <title>URL.createObjectURL(mediaSource)</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -16,8 +16,9 @@
 test(function() {
     var mediaSource = new MediaSource();
     var url = window.URL.createObjectURL(mediaSource);
-    assert_not_equals(url, null);
-}, "URL.createObjectURL : 2. Return a unique MediaSource object URL that can be used to dereference the mediaSource argument, and run the rest of the algorithm asynchronously.");
+    assert_true(url != null);
+    assert_true(url.match(/^blob:.+/) != null);
+}, "URL.createObjectURL(mediaSource) should return a unique Blob URI.");
 </script>
 </body>
 </html>
